bind-dns-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: bind
  name: bind
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: bind
    spec:
      containers:
      - image: sameersbn/bind:latest
        name: bind
        ports:
        - containerPort: 53
          protocol: UDP
        - containerPort: 53
          protocol: TCP
        - containerPort: 10000
          protocol: TCP
        volumeMounts:
          - mountPath: /data
            name: data
        resources: {}
      restartPolicy: Always
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
        searches:
          - ns1.svc.cluster.local
          - my.dns.search.suffix
      volumes:
        - name: data
          flexVolume:
            driver: "fstab/cifs"
            secretRef:
              name: "cifs-secret"
            options:
              networkPath: "//192.168.0.3/public/data"
              mountOptions: "dir_mode=0755,file_mode=0755,noperm"
status: {}
