safe_docker-compose.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pia-and-deluge
spec:
  containers:
  - name: pia 
    image: qmcgaw/private-internet-access
    securityContext:
      privileged: true
      capabilities:
        add:
          - NET_ADMIN
    volumeMounts:
      - mountPath: /dev/net/tun
        name: dev-net-tun
  - name: deluge 
    image: linuxserver/deluge
    ports: 
      - containerPort: 8112
    volumeMounts:
      - mountPath: /mnt
        name: big-drive
  dnsConfig:
    nameservers:
      - 8.8.8.8
      - 8.8.4.4
    searches:
      - ns1.svc.cluster.local
      - my.dns.search.suffix
  volumes:
  - hostPath:
      path: /dev/net/tun
    name: dev-net-tun
  - flexVolume:
      driver: "fstab/cifs"
      secretRef:
        name: "cifs-secret"
      options:
        mountOptions: "dir_mode=0755,file_mode=0644"
        networkPath: "//192.168.0.3/public"
    name: big-drive
