bind-dns-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: bind
  name: bind
spec:
  ports:
  - name: "53"
    port: 53
    targetPort: 53
  - name: "10000"
    port: 10000
    targetPort: 10000
  selector:
    io.kompose.service: bind
  type: LoadBalancer
status:
  loadBalancer: {}
