jackett-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: jackett
  name: jackett
spec:
  ports:
  - name: "9117"
    port: 9117
    targetPort: 9117
  selector:
    io.kompose.service: jackett
  type: LoadBalancer
status:
  loadBalancer: {}
