pia-and-deluge-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pia-and-deluge
  name: pia-and-deluge
  selfLink: /api/v1/namespaces/default/services/pia-and-deluge
spec:
  ports:
  - name: port-1
    port: 8112
    protocol: TCP
    targetPort: 8112
  - name: port-2
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pia-and-deluge
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
