railsapp_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: railsapp-service
spec:
  selector:
    app: rails-example-app 
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
