deluge-ingress-traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deluge-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ladybug.home
    http:
      paths:
      - path: /deluge
        backend:
          serviceName: pia-and-deluge
          servicePort: 8112
