sonarr-ingress-traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ladybug.home
    http:
      paths:
      - path: /tv 
        backend:
          serviceName: sonarr
          servicePort: 8989
